<resources>
    <string name="app_name">Thealth</string>
    <string name="facebook_app_id" translatable="false">208769413867437</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb208769413867437</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_msg">In the past, women relied on natural beauty treatments from the ingredients found</string>
    <string name="continue_facebook">Continue with Facebook</string>
    <string name="continue_google">Continue with Google</string>
    <string name="signup_email">Sign Up with Email</string>
    <string name="login_email">Log In with Email</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="already_member">Already a member?</string>
    <string name="new_member">A new member?</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="forgotpassword_msg">Please enter your email.\nWe will send a verification code to\nyour email.</string>
    <string name="email_signup_msg">After signup, you will verify your email\nand complete your profile.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="resend"><i><u>Resend</u></i></string>
    <string name="auth">Authentication</string>
    <string name="otp_auth">OTP Authentication</string>
    <string name="auth_msg">A message with a verification code has been sent to your email. Enter the code to continue.</string>
    <string name="havent_received">Haven\'t you received?</string>
    <string name="enter_name">Enter your name.</string>
    <string name="enter_email">Enter your email.</string>
    <string name="enter_password">Enter your password.</string>
    <string name="invalid_email">Your email is invalid. Please enter a valid email.</string>
    <string name="login_success">Successfully logged In.</string>
    <string name="unknown_user">You haven\'t been registered. Please sign up.</string>
    <string name="incorrect_password">Your password is incorrect.</string>
    <string name="enter_code">Enter the verification code.</string>
    <string name="incorrect_code">The code is incorrect.</string>
    <string name="unexisting_user">This user doesn\'t exist.</string>
    <string name="server_issue">Server issue</string>
    <string name="another_code_sent">Another code sent to your email.</string>
    <string name="signup_success">Successfully registered.</string>
    <string name="code_sent_to_email">A message with a verification code has been sent to your email: </string>
    <string name="enter_code_continue">Enter the code to continue.</string>
    <string name="someone_using_email">Someone is using the same email. Please try another one.</string>
    <string name="registered_user">This user has already been registered.</string>
    <string name="password_reset_link_sent">We have sent a password reset link to your email. Please check...</string>
    <string name="search">Search...</string>
    <string name="no_result">No result found...</string>
    <string name="complete_profile">Complete your profile</string>
    <string name="name_">Name *</string>
    <string name="email_">Email *</string>
    <string name="phone_">Phone Number *</string>
    <string name="location_">Location *</string>
    <string name="reset_password">Reset Password</string>
    <string name="logout">Log Out</string>
    <string name="logged_out">Logged Out</string>
    <string name="enter_phone">Enter your phone number.</string>
    <string name="invalid_phone_number">The phone number is invalid. Try another one.</string>
    <string name="enter_location">Enter your location.</string>
    <string name="load_profile_picture">Load your profile picture.</string>
    <string name="account_not_exist">Your account doesn\'t exist.</string>
    <string name="profile_updated">Your profile has been updated successfully.</string>
    <string name="ok">OK</string>
    <string name="type_address">Type address...</string>
    <string name="confirm">Confirm</string>
    <string name="speech_error">Sorry! Your device doesn\'t support speech input</string>
    <string name="location_text">Please just try selecting correct location. You can type the address to search or you can click on the map to select correct location.</string>
    <string name="hint">Hint</string>
    <string name="select_location">Please select a location.</string>
    <string name="confirm_select_location">Are you sure you want to select this location?</string>
    <string name="location_info">Location Info</string>
    <string name="service_connection_suspended">Service connection suspended</string>
    <string name="service_connection_failed">We can not detect any internet connectivity. Please check your internet connection and try again.</string>

    <string name="enter_service_location">Please enter the service provider location.</string>
    <string name="notification">Notification</string>
    <string name="warning">Warning</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_more_than8">Please enter at least 8 characters</string>
    <string name="reenter_password">Reenter the password</string>
    <string name="enter_same_password">Please enter the same password.</string>
    <string name="password_reset_success">Password has been reset successfully. Please login with the new password.</string>

    <string name="live">Live</string>
    <string name="feed">Feed</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="add_story">Add Story</string>
    <string name="create_post">Create Post</string>
    <string name="publical">Public</string>
    <string name="add_location">Add Location</string>
    <string name="what_goin_on">What\'s going on?</string>
    <string name="add_to_post">Add to your post</string>
    <string name="select_privacy">Select Privacy</string>
    <string name="friends">Friends</string>
    <string name="groups">Groups</string>
    <string name="privated">Private</string>
    <string name="done">Done</string>
    <string name="share">Share</string>
    <string name="likes">Likes</string>
    <string name="view_likes">View likes</string>
    <string name="picture">Picture</string>
    <string name="loaded_pictures">Loaded pictures</string>
    <string name="video">Video</string>
    <string name="video_loaded">Video loaded</string>
    <string name="processing">Processing...</string>
    <string name="attached_pictures">Attached pictures</string>
    <string name="attached_videos">Attached videos</string>
    <string name="delcurrentitem">Delete current item</string>
    <string name="post_success">The feed posted successfully</string>
    <string name="post_update_success">The feed updated successfully</string>
    <string name="saved">Saved</string>
    <string name="unsaved">Unsaved</string>
    <string name="video_exceeds_3mins">This video exceeds 3 mins.</string>
    <string name="video_cant_exceed_3mins">Video can\'t exceed 3 mins.</string>
    <string name="picture_cant_exceed10">Count of pictures can\'t exceed 10.</string>
    <string name="post">Post</string>
    <string name="write_comment">Write a comment...</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="report_abuse">Report an abuse</string>
    <string name="downloaded_at">Downloaded at</string>
    <string name="comments">Comments</string>
    <string name="no_comment">No comment posted...</string>
    <string name="justnow">Just now</string>
    <string name="ago">ago</string>
    <string name="recovery">Recovery</string>
    <string name="enter_post_data">Please enter a post data.</string>
    <string name="highlights">Highlights</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cropping">Cropping</string>
    <string name="discard">Discard</string>
    <string name="read_more">Read More...</string>
    <string name="less">Less</string>
    <string name="save">Save</string>
    <string name="compressingvideo">Compressing the video ...</string>
    <string name="sure_delete">Are you sure you want to delete this?</string>
    <string name="deleted">Deleted</string>
    <string name="no_exist">It doesn\'t exist</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="get_all"><u>Get All</u></string>
    <string name="cancel">Cancel</string>
    <string name="enter_keyword">Enter a keyword...</string>
    <string name="search_feed">Search a feed</string>
    <string name="edit_post">Edit Post</string>

    <!--    Photo Editor-->

    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>

</resources>






























