<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/white_round_fill">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_alert_header">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="@font/comfortaa"
                android:text="@string/otp_auth"
                android:layout_margin="18dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_gravity="center"/>
            <ImageView
                android:id="@+id/btn_cancel"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:padding="3dp"
                android:src="@drawable/cancelicon"
                android:layout_gravity="right"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"/>
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/messageBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:fontFamily="@font/comfortaa"
                android:textColor="@color/text"
                android:textSize="12sp"
                android:text="@string/auth_msg"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/text"
                    android:textSize="12sp"
                    android:fontFamily="@font/comfortaa"
                    android:text="@string/havent_received"/>
                <TextView
                    android:id="@+id/resendButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:fontFamily="@font/comfortaa"
                    android:gravity="center"
                    android:textColor="@color/green_color_picker"
                    android:textSize="14sp"
                    android:text="@string/resend"/>
            </LinearLayout>
            <com.chaos.view.PinView
                android:id="@+id/codeBox"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:inputType="number"
                android:padding="12dp"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                app:cursorColor="@color/colorAccent"
                app:cursorWidth="2dp"
                app:hideLineWhenFilled="true"
                app:itemCount="5"
                app:itemHeight="48dp"
                app:itemRadius="4dp"
                app:itemSpacing="0dp"
                app:itemWidth="48dp"
                app:lineColor="@color/text"
                app:lineWidth="2dp"
                app:viewType="rectangle" />
            <TextView
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/submit"
                android:fontFamily="@font/comfortaa"
                android:textStyle="bold"
                android:textColor="@color/green_color_picker"
                android:textSize="16sp"
                android:padding="8dp"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>





























