<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".main.SelectPostPrivacyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_left"
                android:padding="3dp"
                android:onClick="back"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/select_privacy"
                android:textColor="@color/text"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="@font/comfortaa"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="10dp"
                android:padding="8dp"
                android:text="@string/done"
                android:onClick="done"
                android:textColor="@color/blue"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:onClick="selPublic">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/publical"
                android:fontFamily="@font/comfortaa"
                android:textColor="@color/text"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"/>

            <ImageView
                android:id="@+id/publicmark"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_checked"
                android:padding="3dp"
                android:visibility="visible"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="10dp"/>

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.2dp"
            android:background="#E0E0E0"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:onClick="toFriends">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/friends"
                android:textColor="@color/text"
                android:fontFamily="@font/comfortaa"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/right_arrow_gray"
                android:padding="6dp"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="10dp"/>

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.2dp"
            android:background="#E0E0E0"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:onClick="toGroups">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/groups"
                android:textColor="@color/text"
                android:fontFamily="@font/comfortaa"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/right_arrow_gray"
                android:padding="6dp"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="10dp"/>

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.2dp"
            android:background="#E0E0E0"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:onClick="selPrivate">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/privated"
                android:textColor="@color/text"
                android:fontFamily="@font/comfortaa"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"/>

            <ImageView
                android:id="@+id/privatemark"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_checked"
                android:padding="3dp"
                android:visibility="invisible"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="10dp"/>

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.2dp"
            android:background="#E0E0E0"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

    </LinearLayout>

</FrameLayout>




























