<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_round_fill">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_alert_header">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_feed"
            android:fontFamily="@font/comfortaa_bold"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:layout_margin="15dp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_gravity="center"/>
        <ImageView
            android:id="@+id/btn_cancel"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:padding="3dp"
            android:src="@drawable/cancelicon"
            android:layout_gravity="right"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:visibility="visible"
        android:id="@+id/search_bar">

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px" />

        <EditText
            android:id="@+id/edt_search"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/text"
            android:textColorHint="@color/dark_gray"
            android:hint="@string/enter_keyword"
            android:imeOptions="actionSearch"
            android:layout_gravity="center_vertical"
            android:singleLine="true"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="20dp"
            android:paddingRight="15dp"
            android:layout_margin="25dp"
            android:background="@drawable/gray_circular_stroke"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/allButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_all"
                android:fontFamily="@font/comfortaa_bold"
                android:textColor="@color/green_color_picker"
                android:textSize="16sp"
                android:padding="8dp"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>