<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/activity"
    tools:context=".main.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/forgotpassword"
                android:textAllCaps="true"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:padding="20dp"
                android:textStyle="bold"
                android:gravity="center"/>

        </FrameLayout>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:visibility="visible"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/lb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotpassword_msg"
            android:textColor="@color/text"
            android:fontFamily="@font/comfortaa"
            android:lineSpacingExtra="5dp"
            android:textSize="14sp"
            android:padding="30dp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="66dp"
                        android:orientation="horizontal"
                        android:background="@drawable/circular_shadow">
                        <ImageView
                            android:layout_width="18dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="15dp"
                            android:background="@drawable/ic_mail"/>
                        <EditText
                            android:id="@+id/emailBox"
                            android:layout_width="0px"
                            android:layout_weight="1"
                            android:background="@null"
                            android:textColor="@color/text"
                            android:textColorHint="#cfcfcf"
                            android:fontFamily="@font/comfortaa"
                            android:inputType="textEmailAddress"
                            android:layout_marginRight="10dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:singleLine="true"
                            android:layout_marginLeft="10sp"
                            android:layout_gravity="center"
                            android:textSize="16sp"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/btn_submit"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:text="@string/submit"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:fontFamily="@font/comfortaa"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/button_shadow"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:drawableLeft="@drawable/left_arrow_gray"
                            android:drawableTint="@color/text"
                            android:drawablePadding="5dp"
                            android:fontFamily="@font/comfortaa"
                            android:onClick="back"
                            android:textColor="@color/text"
                            android:text="@string/signin"/>
                    </LinearLayout>

                </LinearLayout>

            </ScrollView>
        </LinearLayout>
    </LinearLayout>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loading_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:indicator="LineSpinFadeLoader"
        app:indicator_color="#F53700" />

</FrameLayout>


























