<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_round_fill">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_alert_header">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="@font/comfortaa"
                android:layout_margin="18dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_gravity="center"/>
            <ImageView
                android:id="@+id/btn_cancel"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:padding="3dp"
                android:src="@drawable/cancelicon"
                android:layout_gravity="right"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"/>
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/gray_stroke"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/newpasswordBox"
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/comfortaa"
                    android:padding="12dp"
                    android:inputType="textPassword"
                    android:gravity="start"
                    android:background="@null"
                    android:hint="@string/enter_new_password"
                    android:textColor="@color/text"/>

                <ImageButton
                    android:id="@+id/showButton"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/eyeunlock"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/transparent"/>

            </LinearLayout>

            <EditText
                android:id="@+id/confirmpasswordBox"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:inputType="textPassword"
                android:background="@drawable/gray_stroke"
                android:padding="12dp"
                android:fontFamily="@font/comfortaa"
                android:gravity="start"
                android:hint="@string/reenter_password"
                android:textColor="@color/text"/>

            <TextView
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/submit"
                android:fontFamily="@font/comfortaa"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/green_color_picker"
                android:textSize="14sp"
                android:padding="8dp"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>





























